Add unit tests to CPP template.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,13 +8,51 @@
 cmake_minimum_required(VERSION 2.8)
 project(${TEMPLATE_PROJECT_NAME})
 
+# Targets
+set(MAIN_TARGET ${CMAKE_PROJECT_NAME})
+set(TESTS_TARGET ${CMAKE_PROJECT_NAME}_tests)
+
+# Directories
+set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
+
+# -- Third Party Libraries --
+
+# Google Test (for unit testing)
+find_package(GTest)
+
 # -- Main Executable --
 
-add_executable(${CMAKE_PROJECT_NAME}
-  src/main.cpp)
+# Build main executable
+add_executable(${MAIN_TARGET}
+  ${SOURCE_DIR}/main.cpp)
 
+# Run main executable
 add_custom_target(run
-  COMMAND ${CMAKE_PROJECT_NAME}
-  DEPENDS ${CMAKE_PROJECT_NAME}
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  COMMENT "Running ${TEMPLATE_PROJECT_NAME}...")
+  COMMAND ${MAIN_TARGET}
+  DEPENDS ${MAIN_TARGET}
+  WORKING_DIRECTORY ${BUILD_DIR}
+  COMMENT "Running ${CMAKE_PROJECT_NAME}...")
+
+# -- Tests Executable --
+
+if (${GTEST_FOUND})
+
+  # Builds tests executable
+  add_executable(${TESTS_TARGET} EXCLUDE_FROM_ALL
+    ${TESTS_DIR}/main.cpp)
+  target_include_directories(${TESTS_TARGET}
+    PRIVATE ${GTEST_INCLUDE_DIRS})
+  target_link_libraries(${TESTS_TARGET}
+    ${GTEST_BOTH_LIBRARIES}
+    pthread)
+
+  # Run tests executable
+  add_custom_target(runtests
+    COMMAND ${TESTS_TARGET}
+    DEPENDS ${TESTS_TARGET}
+    WORKING_DIRECTORY ${BUILD_DIR}
+    COMMENT "Running ${CMAKE_PROJECT_NAME} unit tests...")
+
+endif()
